# ANRO

./: .gitignore  .rosinstall  README.md
bagfiles/: 2019-03-14-18-14-09.bag  subset.bag
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h
catkin_ws/devel/lib/pkgconfig/: begginer_tutorials.pc  beginner_tutorials.pc
catkin_ws/install/: setup.sh
catkin_ws/install/include/beginner_tutorials/: AddTwoIntsResponse.h  Num.h
catkin_ws/install/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/src/begginer_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  params.yaml  steeringparams.yaml
catkin_ws/src/my_robot/: CMakeLists.txt  dhpars.json  package.xml
catkin_ws/src/my_robot/launch/: 3lab.launch  3labrviz.launch  IkinRviz.launch  ikin.launch  ikinEllipse.launch  ikinRviz.launch  ikinSquare.launch  immovable_display.launch  jint.launch  jintRviz.launch  movable_display.launch  oint.launch  ointEllipse.launch  ointRviz.launch  ointSquare.launch
catkin_ws/src/my_robot/param/: 3dhparams.yaml  dhparams.yaml  dhpars.json
catkin_ws/src/my_robot/rviz/: 3labRvizConfig.rviz  5l.rviz  ikin.rviz
catkin_ws/src/my_robot/script/: IKIN.py  IkinOint.py  Jint.py  KDL_DKIN.py  NONKDL_DKIN.py  Oint.py  dh2rpy.py  elipse.py  ellipse.py  square.py
catkin_ws/src/my_robot/srv/: Jint_Control.srv  Oint_Control.srv
catkin_ws/src/my_robot/urdf/: immovable.urdf  mov.urdf
catkin_ws/src/r2d2/: CMakeLists.txt  package.xml
catkin_ws/src/testbot_description/: package.xml
(+10 files in other folders)
